assets/css/style.css
/* BASE DESIGN BASED ON APPEARANCE ON GALAXY FOLD (280px) */

@font-face {
  font-family: custom-regular;
  src: url("../fonts/AtkinsonHyperlegible-Regular.ttf");
}

@font-face {
  font-family: custom-bold;
  src: url("../fonts/AtkinsonHyperlegible-Bold.ttf");
}

@font-face {
  font-family: custom-italic;
  src: url("../fonts/AtkinsonHyperlegible-Italic.ttf");
}

/* ------------------- VARIABLES ------------------- */

:root {
  --header-xl: 2.8rem custom-bold;
  --header-large: 2.25rem custom-bold;
  --header-medium: 1.85rem custom-bold;
  --header-small: 1.5rem custom-italic;

  --body-xxl: 1.8rem custom-regular;
  --body-xl: 1.5rem custom-regular;
  --body-large: 1.23rem custom-regular;
  --body-medium: 1rem custom-regular;
  --body-small: 0.9rem custom-regular;

  --nav-medium: 1.6rem custom-regular;
  --nav-small: 1.1rem custom-regular;
  --nav-xs: 0.9rem custom-regular;

  --footer-medium: 1rem custom-regular;

  --primary-color: #f8f8ff;
  --secondary-color: #405303;
  --tertiary-color: #4a647a;
  --quaternary-color: #102d3d;
  --quinary-color: #d4c6bb;
}

/* ------------------- GLOBAL ------------------- */
html,
body {
  margin: 0;
  padding: 0;
}

body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: black;
}

h2 {
  font: var(--header-large);
  color: white;
}

h3 {
  font: var(--header-medium);
}

a {
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

p {
  max-width: 75ch;
  font: var(--body-small);
  line-height: 1.5;
  text-justify: inter-word;
  margin: 16px 0px 16px 0px;
}

/* ------------------- NAV ------------------- */

nav {
  z-index: 4;
  position: fixed;
  top: 0;
  left: 0;
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 100%;
  padding: 1em 0;
  background-color: black;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
}

nav,
nav a {
  color: lime;
}

nav ul {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  list-style: none;
  padding: 0;
  margin: 0;
  gap: 3px;
}

nav li {
  font: var(--nav-xs);
  margin: 0;
}

#hero-container {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100vw;
  height: 100vh;
  color: white;
}

#hero-video {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  object-fit: cover;
  object-position: bottom;
}

#hero-video ~ #overlay {
  z-index: 2;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: linear-gradient(180deg, rgba(2, 0, 36, 0) 0%, rgb(0, 0, 0) 140%);
}

#title {
  z-index: 3;
  font-family: custom-bold;
  font-size: 7vw;
  letter-spacing: 10px;
  margin-right: -10px;
  animation: title 1.2s forwards linear;
  color: lime;
  text-shadow: 0 2px 2px #3bda01, -2px 5px 1px #3cbd01, -4px 8px 0px #0d9402,
    -6px 11px 0px #206700, -8px 14px 0px #105402, -10px 17px 0px #1b4300,
    -12px 20px 0px #171717, -14px 23px 0px #000;
}

#subtitle {
  z-index: 3;
  font-family: custom-italic;
  font-size: 4vw;
  opacity: 0;
  animation: subtitle 1.2s forwards linear;
  animation-delay: 1.2s;
  text-shadow: 0 2px 2px #3bda01, -2px 5px 1px #3cbd01;
}

/* keyframe animations which will be used to animate the title */
@keyframes title {
  from {
    opacity: 0;
  }

  to {
    font-size: 7vw;
    opacity: 1;
  }
}

@keyframes subtitle {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

/* ------------------- MAIN CONTAINER ------------------- */

main {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  padding-bottom: 2em;
}

section {
  width: 75%;
  padding: 0px 20px;
  margin: 25px 0;
}

article {
  min-height: 250px;
  padding: 0;
  margin: 0;
}

h2 {
  margin: 20px 0px;
}

/* ------------------- ABOUT ME ARTICLE ------------------- */

#about-me h2 {
  text-shadow: 0 2px 2px #3bda01, -2px 5px 1px #3cbd01;
  text-align: left;
  margin-top: 16px;
}

#about-me p {
  color: lime;
  text-align: left;
}

#about-me img {
  height: 200px;
  border-radius: 200px;
}

/* ------------------- PROJECTS ARTICLE ------------------- */

#projects {
  display: flex;
  justify-content: center;
  align-items: center;
}

#projects > h2 {
  text-shadow: 0 2px 2px #3bda01, -2px 5px 1px #3cbd01;
  text-align: left;
  width: 100%;
}

/* ------------------- PROJECTS ------------------- */

.project {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  color: var(--primary-color);
  text-align: center;
}

.project .name {
  font: var(--header-small);
  text-align: left;
  width: 100%;
}

.project .description {
  color: lime;
  text-align: left;
  width: 100%;
  margin: 5px 0;
}

.project img {
  width: 100%;
  border-radius: 8px;
}

.project:hover {
  filter: brightness(1.1);
}

/* ------------------- FOOTER ------------------- */

footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  text-align: center;
  background-color: black;
}

footer h4 {
  color: white;
  text-shadow: 0 2px 2px #3bda01, -2px 5px 1px #3cbd01;
  font: var(--header-small);
  width: 100%;
  margin: 10px 0px;
}

footer ul {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

footer li {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 0;
  transition: transform 0.7s;
}

footer li:hover {
  filter: brightness(1.1);
  text-decoration: underline;
}

footer img {
  width: 50px;
}

footer img#linkedin-logo {
  margin-left: 13px;
}

footer a {
  color: var(--primary-color);
  font: var(--nav-small);
  display: inline-block;
  margin: 12px 0px;
}

/* ------------------- MEDIA QUERIES ------------------- */

@media screen and (min-width: 320px) {
  nav li {
    margin: 0px 8px;
  }
}

@media screen and (min-width: 481px) {
  nav li {
    margin: 0px 15px;
  }

  #about-me img {
    height: 250px;
    border-radius: 200px;
  }

  p {
    font: var(--body-medium);
  }
}

@media screen and (min-width: 769px) {
  nav {
    justify-content: flex-end;
  }

  p {
    font: var(--body-medium);
  }

  #about-me {
    flex-direction: row;
    justify-content: center;
    align-items: center;
  }

  #about-me h2 {
    margin-top: 0px;
  }

  #about-me div:nth-child(2) {
    order: 1;
    justify-content: center;
    align-items: center;
  }

  .project h3 {
    font: var(--header-small);
  }

  footer h4 {
    font: var(--header-small);
    font-family: custom-italic;
    margin: 10px 0px;
  }

  footer ul {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
  }

  footer a {
    font: var(--nav-small);
    display: inline-block;
    margin: 12px 12px;
  }
}

@media screen and (min-width: 1025px) {
  header {
    justify-content: flex-end;
  }

  nav {
    margin-right: 25px;
  }

  #about-me img {
    height: 225px;
    border-radius: 250px;
  }

  #projects {
    flex-direction: row;
    flex-wrap: wrap;
  }

  footer h4 {
    font-family: custom-italic;
    margin: 10px 0px;
  }

  footer a {
    margin: 12px 12px;
  }
}

@media screen and (min-width: 1366px) {
  #hero-image-container {
    height: 600px;
  }

  #about-me img {
    height: 300px;
    border-radius: 200px;
  }

  p {
    font: var(--body-large);
    margin: 20px 0px;
  }
}

@media screen and (min-width: 3200px) {
  nav li {
    font: var(--body-xl);
  }

  h2 {
    font: var(--header-xl);
  }

  p {
    font-family: custom-regular;
    margin: 30px 0px;
  }

  #about-me {
    padding: 0px 150px;
  }

  .project {
    max-width: 2600px;
  }

  footer {
    margin-top: 50px;
  }
}

